fixing alignment

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -37,6 +37,7 @@ h3 {
 	.menu {
 		float: left;
 		width: 100%;
+		padding: 0;
 	}
 }
 
